--- a/css/responsive.css
+++ b/css/responsive.css
@@ -12,7 +12,6 @@
 
 /* ====== responsive mobile ===== */
 @media only screen and (max-width: 800px) {
-
     #preloader {
         background-size: 40%;
     }
@@ -21,37 +20,21 @@
         font-size: 1rem;
     }
 
-    .navbar {
-        position: fixed;
-        display: flex;
-        height: 50px;
-        width: 96%;
-        align-items: center;
-        background-color: var(--color-nav);
-        border: solid 2px var(--color-1);
-        border-radius: 50vh;
-        margin: 5px 7px;
-        justify-content: center;
-        box-shadow: 0 0 10px var(--color-1);
-        z-index: 99;
-    }
-
     .navbarm {
         display: flex;
         width: 100%;
-        /* align-content: space-around; */
-        /* z-index: 2; */
-        align-items: center;
+        
+        height: 40px;
     }
 
     .logo {
         display: flex;
-        align-items: center;
+        
         width: 5%;
         padding-left: 10px;
         color: var(--color-5);
         z-index: 99;
-    }
+    align-items: flex-end;}
 
     .pad.bx.bx-menu {
         display: block;
@@ -61,7 +44,7 @@
         display: block;
         cursor: pointer;
         width: 40px;
-        height: 95%;
+        height: 40px;
         right: 10px;
         position: absolute;
         z-index: 99;
@@ -83,10 +66,8 @@
         box-shadow: 0 10px 50px #000;
     }
 
-    .nav {}
-
     .nav-menu-visible {
-        transform: translate(0px, -920px);
+        transform: translate(0px, -1010px);
     }
 
     .navbarli {
