--- a/css/style.css
+++ b/css/style.css
@@ -267,7 +267,6 @@ nav .active a {
     background-image: url(../img/bg-03.png);
     background-size: 100% 100%;
     background-position: center;
-    /* background-size: cover; */
 }
 
 .banner {
@@ -301,12 +300,15 @@ nav .active a {
     font-family: 'Varela Round', sans-serif;
 }
 
-.home-text h2 {
+.home-text ul{
+    padding-left: 50px;
+}
+.home-text li {
     font-family: 'Varela Round', sans-serif;
     color: var(--color-2);
     padding: 5px 0;
     font-size: 30px;
-    text-align: center;
+    font-weight: bold;
 }
 
 /* END MAIN */
@@ -349,8 +351,10 @@ nav .active a {
     width: 100%;
     border-radius: 20px;
     box-shadow: 0 0 10px var(--color-shadow);
+    background-color: rgba(0, 0, 0, 0.03);
     border: solid 2px #1d36e9;
     margin: auto;
+    transition: border .5s;
 }
 
 .card .card-title {
@@ -373,24 +377,26 @@ nav .active a {
 .card a {
     color: var(--color-1);
     text-decoration: none;
-    /* width: 100%; */
     padding: 5px 10px;
-    /* margin-top: 30px; */
     transform: translate(10px, 10px);
     border-radius: 50vh;
     border: solid 2px var(--color-3);
+    transition: all 1s;
 }
-
-.card:hover {
-    border: solid 2px var(--color-1);
-}
-
 .card img {
     width: 100%;
     height: 70%;
-    border-top-right-radius: 20px;
-    border-top-left-radius: 20px;
+    border-top-right-radius: 18px;
+    border-top-left-radius: 18px;
 }
+.card:hover {
+    border: solid 2px var(--color-1);
+}
+.card a:hover{
+    border: solid 2px var(--color-4);
+    color: #fff;
+}
+
 
 /* ======project===== */
 #projects {
