--- a/css/style.css
+++ b/css/style.css
@@ -18,17 +18,17 @@
 
 /* scroll bar */
 ::-webkit-scrollbar {
-    width: 5px;
+    width: 6px;
+    background-color: rgb(11, 1, 39);
 }
 
 ::-webkit-scrollbar-track {
-    box-shadow: inset 0 0 5px rgb(70, 55, 207);
     border-radius: 10px;
+    box-shadow: inset 0 0 4px rgb(252, 252, 252);
 }
 
 ::-webkit-scrollbar-thumb {
-    background: var(--color-4);
-    border: solid 1px rgb(0, 0, 0);
+    background: var(--color-1);
     border-radius: 10px;
 }
 
@@ -221,6 +221,8 @@ nav .active a {
 /* =====SEARCH COMPONENT END===== */
 
 /* =====END MENU======= */
+
+
 #secction {
     background-color: var(--color-bg);
     background-size: cover;
@@ -254,11 +256,74 @@ nav .active a {
 .btn-float:hover {
     width: 70px;
     height: 70px;
-    background-color: #64ff7e;
+    background-color: #ffffff;
 }
+
+/* mouse indicator */
+.mouse-icon{
+    width: 25px;
+    height: 45px;
+    border: 2px solid rgb(0, 0, 0);
+    border-radius: 15px;
+    position: absolute;
+    box-shadow: inset 0 0 10px rgb(0, 0, 0);
+    bottom: 10px;
+    right: calc(50vw - 12px);
+    text-align: center;
+    margin: 0px auto;
+ }.mouse-wheel{
+        height: 6px;
+        margin: 2px auto 0;
+        display: block;
+        width: 3px;
+        background-color: rgb(197, 197, 197);
+        border-radius: 50%;
+        -webkit-animation: 1.6s ease infinite wheel-up-down;
+        -moz-animation: 1.6s ease infinite wheel-up-down;
+        animation: 1.6s ease infinite wheel-up-down;
+ }
+ @-webkit-keyframes wheel-up-down {
+     0% {
+         margin-top: 2px;
+         opacity: 0;
+     }
+     30% {
+         opacity: 1;
+     }
+     100% {
+         margin-top: 20px;
+         opacity: 0;
+     }
+ }@-moz-keyframes wheel-up-down {
+     0% {
+         margin-top: 2px;
+         opacity: 0;
+     }
+     30% {
+         opacity: 1;
+     }
+     100% {
+         margin-top: 20px;
+         opacity: 0;
+     }
+ }@keyframes wheel-up-down {
+     0% {
+         margin-top: 2px;
+         opacity: 0;
+     }
+     30% {
+         opacity: 1;
+     }
+     100% {
+         margin-top: 20px;
+         opacity: 0;
+     }
+ }
+
 
 /* MAIN */
 #home {
+    position: relative;
     height: 100vh;
     width: 100%;
     background-image: url(../img/bg-03.png);
