--- a/css/libros.css
+++ b/css/libros.css
@@ -213,7 +213,7 @@
     width: 100%;
     height: 260px;
     background-color: rgb(14, 13, 13);
-    background-image: url(/img/file_failed_icon.png);
+    /* background-image: url(/img/file_failed_icon.png); */
     background-size: 40%;
     background-position: center;
     background-repeat: no-repeat;
