--- a/css/responsive.css
+++ b/css/responsive.css
@@ -23,18 +23,18 @@
     .navbarm {
         display: flex;
         width: 100%;
-        
+
         height: 40px;
     }
 
     .logo {
         display: flex;
-        
         width: 5%;
         padding-left: 10px;
         color: var(--color-5);
         z-index: 99;
-    align-items: flex-end;}
+        align-items: flex-end;
+    }
 
     .pad.bx.bx-menu {
         display: block;
@@ -54,16 +54,20 @@
 
     /* navvvv */
     .nav {
+        position: absolute;
         background: var(--color-nav);
         width: 100%;
-        height: 1009px;
         border-bottom-right-radius: 20px;
         border-bottom-left-radius: 20px;
+        border-radius: 20px;
+        border: 2px solid var(--color-1);
+        padding-top: 20px;
         flex-wrap: wrap;
         align-items: center;
         transition: all 0.2s;
-        position: inherit;
-        box-shadow: 0 10px 50px #000;
+        box-shadow: 0 0 20px rgb(0, 247, 255);
+        top: -3px;
+        height: 550px;
     }
 
     .nav-menu-visible {
@@ -73,7 +77,6 @@
     .navbarli {
         display: flex;
         flex-direction: column;
-        justify-content: flex-end;
         padding: 20px 10px;
         width: 70%;
         margin: auto;
@@ -84,11 +87,15 @@
     .navbarli li {
         border: 2px solid #837d83;
         border-radius: 50vh;
-        padding: 8px 15px;
+        padding: 10px 15px;
         justify-content: center;
         margin: 5px 0px;
     }
-
+    .navbarli li ul li{
+        padding: 5px 0px;
+        width: 180px;
+        margin: 5px auto;
+    }
     nav ul li a {
         background: transparent;
         color: var(--color-1);
@@ -98,11 +105,22 @@
         position: relative;
 
     }
-
+    nav ul li ul{
+        display: block;
+        border: none;
+        box-shadow: none;
+        margin-top: 3px;
+    }
+    nav ul li:hover > ul::after{
+        display: none;
+    }
+    nav ul li ul li a{
+        font-size: 12px;
+    }
     .search-container {
-        position: fixed;
-        margin-left: 120px;
-        z-index: 100;
+        position: absolute;
+        top: 6px;
+        right: 50px;
     }
 
     #home {
