--- a/css/biblioteca.css
+++ b/css/biblioteca.css
@@ -1,3 +1,7 @@
+
+#nav li .menu.active{
+    color: var(--color-nav);
+}
 #library-section {
     width: 100%;
     height: 100vh;
@@ -11,13 +15,14 @@
 }
 
 .nav-lib {
+    position: relative;
     display: flex;
     height: 30px;
     width: 100%;
     max-width: 1200px;
     margin: auto;
     justify-content: space-between;
-    align-items: center;
+    /* align-items: center; */
 }
 
 .combo-title {
@@ -32,16 +37,16 @@
 }
 
 .libList {
-    position: absolute;
-    width: 230px;
+    position: relative;
+    top: 0px;
+    /* width: 280px; */
     height: 350px;
     border-radius: 10px;
-    border: solid 2px rgb(73, 71, 71);
+    border: solid 2px var(--color-card-border);
     background-color: rgba(3, 0, 14, 0.856);
     padding: 5px;
     transition: all 0.3s;
     overflow: hidden;
-    top: 72px;
     z-index: 10;
 }
 
@@ -60,7 +65,7 @@
 .libList a {
     text-decoration: none;
     color: rgb(128, 181, 250);
-    font-weight: 200;
+    font-weight: 500;
     text-overflow: hidden;
 }
 
@@ -90,7 +95,7 @@
 /* grid list btn style */
 .display-style-btns {
     display: flex;
-    width: 100%;
+    /* width: 100%; */
     align-items: center;
     /* max-width: var(--breakpoint-extra-large); */
     justify-content: flex-end;
@@ -103,9 +108,9 @@
 .display-style-btns button {
     border: none;
     font-size: 22px;
-    display: inline-block;
-    vertical-align: top;
-    margin: 0 8px;
+    display: flex;
+    /* vertical-align: top; */
+    margin: 0 5px;
     background-color: transparent;
     cursor: pointer;
     transition: all 0.3s ease-out;
@@ -202,7 +207,7 @@
     height: 300px;
     width: 200px;
     border-radius: 10px;
-    border: solid 2px rgb(114, 111, 111);
+    border: solid 2px var(--color-card-border);
     font-size: 12px;
     transition: all 0.3s;
     align-items: stretch;
@@ -217,8 +222,8 @@
     background-size: 40%;
     background-position: center;
     background-repeat: no-repeat;
-    border-top-left-radius: 10px;
-    border-top-right-radius: 10px;
+    border-top-left-radius: 8px;
+    border-top-right-radius: 8px;
     overflow: hidden;
 }
 
@@ -323,8 +328,8 @@
     bottom: 4px;
 }
 
-#libros{
-    color: var(--color-4)!important;
+nav li #recursos{
+    color: var(--color-6)!important;
 }
 /* RESPONSIVE */
 
