--- a/css/blogs.css
+++ b/css/blogs.css
@@ -1,47 +1,65 @@
-#blog section{
+#blog section {
     max-width: var(--breakpoint-extra-large);
     margin: auto;
 }
-#blog .image-front-page{
+
+#blog .image-front-page {
     display: flex;
     gap: 20px;
     justify-content: center;
     padding-bottom: 20px;
     flex-wrap: wrap;
 }
-#blog section p{
+
+#blog section p {
     font-size: 18px;
     line-height: 30px;
     font-weight: 300;
     color: rgb(225, 214, 255);
 }
-#blog a{
+
+#blog p a {
     color: blue;
+    position: relative;
     text-decoration: none;
 }
-#blog strong{
+
+#blog p a::before {
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 2px;
+    border-radius: 4px;
+    background: linear-gradient(90deg, rgb(255, 23, 205) 0%, rgb(218, 255, 9) 34%, rgb(0, 255, 242) 100%);
+    bottom: 0;
+    left: 0;
+    transform-origin: right;
+    transform: scaleX(0);
+    transition: transform .3s ease-in-out;
+}
+
+#blog p a:hover::before {
+    transform-origin: left;
+    transform: scaleX(1);
+}
+
+
+
+#blog strong {
     color: rgb(230, 132, 145);
-    
+
 }
-#blog a::after{
-    content: "";
-    position: relative;
-    bottom: 0px;
-    height: 4px;
-    width: 5px;
-    background-color: rgb(255, 0, 234);
-}
-#blog a:hover{
-    text-decoration: underline;
-}
-#blog ul{
+
+#blog ul {
     padding-left: 20px;
 }
-#blog ul li{
+
+#blog ul li {
     color: rgb(225, 214, 255);
     padding: 5px 10px;
 }
-#blog .dowload-secction{
+
+#blog .dowload-secction {
     display: flex;
     width: 100%;
     gap: 20px;
@@ -49,37 +67,45 @@
     justify-content: center;
 }
 
-.video-secction{
+.video-secction {
     width: 100%;
     height: auto;
     padding: 20px 0px;
     display: flex;
     flex-direction: column;
 }
-.video-secction strong{
+
+.video-secction strong {
     padding: 20px 0;
 }
-.video-youtube{
+
+.video-youtube {
     max-width: var(--breakpoint-extra-large);
     height: 51vw;
-    background-color: blueviolet;
 }
-.video-youtube iframe{
+
+.video-youtube iframe {
     width: 100%;
     height: 100%;
 }
-.dowload-secction a{
+
+.dowload-secction a {
+    text-decoration: none;
     color: blue;
     padding: 5px 10px;
     border-radius: 50vh;
     border: 2px solid rgb(51, 241, 255);
 }
+.dowload-secction a:hover{
+    border: 2px solid rgb(255, 51, 211);
+}
 
-.link-recomended{
+.link-recomended {
     padding: 20px 0px;
 }
+
 @media only screen and (max-width: 800px) {
-    .video-youtube{
+    .video-youtube {
         width: calc(100% - 5px);
         height: 51vw;
         overflow: hidden;
