--- a/portfolio/assets/css/style.css
+++ b/portfolio/assets/css/style.css
@@ -96,8 +96,8 @@ h6 {
 #header {
     position: fixed;
     transition: all ease-in-out 0.5s;
-    border-radius: 5px;
-    border : 2px solid var(--color-bdr-nav);
+    /* border-radius: 5px; */
+    border: 2px solid var(--color-bdr-nav);
     top: 0;
     left: 0;
     bottom: 0;
@@ -111,8 +111,9 @@ h6 {
 
 #header {
     transition: all ease-in-out 0.3s;
-    border-radius: 5px;
-    border : 3px solid #ff00a5; 
+    /* border-radius: 10px; */
+    /* border: 3px solid #ff00a5; */
+    /* overflow: hidden; */
 }
 
 #header .profile img {
@@ -695,7 +696,7 @@ section {
 }
 
 .skills .title a {
-    color: #343a40;
+    color: #75a7d9;
 }
 
 .skills .title a:hover {
