--- a/css/hp-prime.css
+++ b/css/hp-prime.css
@@ -5,12 +5,15 @@
     padding-top: 40px;
 }
 .hp-prime-container{
-    height: 5700px;
+    /* height: 5700px; */
     width: 80%;
     margin: 0 auto;
     border-radius: 10px;
-    border: 2px solid #aaa;
-    overflow: hidden;
+    /* overflow: hidden; */
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    gap: 20px 0;
 }
 iframe{
     background-color: #020216;
@@ -22,7 +25,7 @@ iframe{
     justify-content: center;
     padding: 20px 0px;
 }
-#programs-hp-prime a{
+#programs-hp-prime .a-btn{
     margin: auto;
     padding: 8px 10px;
     border-radius: 50vh;
@@ -30,7 +33,7 @@ iframe{
     color: var(--color-4);
     text-decoration: none;
 }
-#programs-hp-prime a:hover{
+#programs-hp-prime .a-btn:hover{
     border: 2px solid var(--color-1);
 }
 
@@ -43,3 +46,49 @@ iframe{
 #nav li ul li #hp-prime{
     color: var(--color-nav-hover)!important;
 }
+
+
+.hp-file-card{
+    width: 250px;
+    height: 230px;
+    border: 1px solid rgba(170, 170, 170, 0.342);
+    border-radius: 10px;
+}
+.hp-file-card a{
+    text-decoration: none;
+}
+.hp-file-card a:hover{
+    color: blue;
+}
+.hp-file-card .hp-cover-file{
+    width: 100%;
+    height: 80%;
+    font-size: 180px;
+    text-align: center;
+}
+.hp-file-card .file-name{
+    display: flex;
+    width: 100%;
+    height: 20%;
+    margin: auto;
+    align-items: center;
+}
+.file-name p{
+    color: rgb(4, 0, 250);
+}
+.hp-file-card .file-name p{
+    font-size: 12px;
+    color: aquamarine;
+}
+.file-name .hp-direct-link{
+    border-left: 2px solid #aaa;
+    width: 50px;
+    text-align: center;
+}
+.file-name .hp-direct-link i{
+font-size: 25px;
+}
+.file-name .hp-direct-link i:hover{
+    font-size: 25px;
+    color: rgb(0, 195, 255);
+    }
