--- a/css/biblioteca.css
+++ b/css/biblioteca.css
@@ -6,26 +6,26 @@
     width: 100%;
     height: auto;
     background-color: var(--color-bg);
-    padding-top: 120px;
+    padding-top: 115px;
 }
 .nav-menu-bar-lib{
     position: fixed;
     width: 100%;
-    height: 120px;
+    height: 105px;
     background: var(--color-bg);
     box-shadow: 0 5px 10px;
     z-index: 2;
 }
 .head{
     position: absolute;
-    top: 50px;
+    top: 43px;
     width: 100%;
     padding: 5px 0;
 }
 
 .head .title h1 {
     color: var(--color-1);
-    padding: 5px 20px;
+    padding: 0 20px;
     font-size: 18px;
 }
 
