--- a/css/style.css
+++ b/css/style.css
@@ -65,6 +65,16 @@ html {
     box-sizing: border-box;
 }
 
+.titulo h1{    
+    font-family: 'Varela Round';
+    padding: 20px 10px;
+    color: #00ffc8;
+    font-size: 2rem;
+    font-weight: bolder;
+
+}
+
+
 /* ===MENU==== */
 .navbar {
     position: fixed;
@@ -445,7 +455,7 @@ nav ul li a:hover {
     max-width: var(--breakpoint-extra-large);
 }
 
-.titulo h1 {
+.titulo h2 {
     font-family: 'Varela Round';
     padding: 20px 10px;
     color: #00ffc8;
@@ -463,44 +473,47 @@ nav ul li a:hover {
 
 #services .services {
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(min(100%, 200px), 1fr));
+    grid-template-columns: repeat(auto-fill, minmax(min(100%, 250px), 1fr));
     grid-gap: 28px;
     max-width: var(--breakpoint-extra-large);
     height: auto;
     margin: auto;
 }
 
-.card {
-    height: 330px;
+.card-services{
+    height: 300px;
     width: 100%;
     border-radius: 12px;
     box-shadow: 0 0 10px var(--color-shadow);
     background-color: rgba(0, 0, 0, 0.03);
     border: solid 2px var(--color-card-border);
     overflow: hidden;
-    /* margin: auto; */
     transition: border .5s;
     transition: all cubic-bezier(0.075, 0.82, 0.165, 1) 0.3s;
 }
-
-.card .card-title {
+.card-services .card-cover{
+    width: 100%;
+    height: 200px;
+}
+.card-cover img{
+    width: 100%;
+    height: 100%;
+}
+.card-title{
     width: 100%;
     height: 30%;
     display: flex;
     flex-direction: column;
     align-items: center;
-    /* margin-bottom: 0px; */
 }
-
-.card h1 {
+.card-title h3{
     font-family: 'Varela Round', sans-serif;
     font-size: 15px;
     color: var(--color-2);
     text-align: center;
     padding: 12px 0;
 }
-
-.btn-card{
+.card-services .btn{
     background-color: transparent;
     margin: none;
     color: var(--color-1);
@@ -511,55 +524,7 @@ nav ul li a:hover {
     border: solid 2px var(--color-3);
     transition: all 0.3s;
 }
-.card img {
-    width: 100%;
-    /* display: flex; */
-    height: 70%;
-    /* text-align: center; */
-    border-top-right-radius: 8px;
-    border-top-left-radius: 8px;
-    justify-content: center;
-}
-.card:hover {
-    position: relative;
-    border: solid 2px var(--color-2);
-    background-color: rgba(255, 255, 255, 0.01);
-    transform: scale(1.2);
-    /* height: 500px; */
-}
-.btn-card:hover{
-    border: solid 2px var(--color-4);
-    color: #fff;
-}
-.box-modal-project.hide{
-    width: 0px;
-    height: 0px;
-}
 
-.box-modal-project{
-    position: fixed;
-    width: 500px;
-    height: 70vh;
-    border-radius: 10px;
-    top: 0px;
-    left: 200px;
-    margin: 25vh auto;
-    background-color: rgba(9, 9, 12, 0.979);
-    overflow: hidden;
-    box-shadow: 0 0 10px #000;
-    transition: 0.3s;
-    z-index: 10;
-}
-.close-box{
-    width: 100%;
-    display: flex;
-    justify-content: right;
-}
-.close-box .bx{
-    color: #1d36e9;
-    font-size: 2rem;
-    cursor: pointer;
-}
 
 /* ======project===== */
 #projects {
@@ -572,13 +537,227 @@ nav ul li a:hover {
 
 #projects .projects {
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(min(100%, 200px), 1fr));
+    grid-template-columns: repeat(auto-fill, minmax(min(100%, 300px), 1fr));
     grid-gap: 28px;
     max-width: var(--breakpoint-extra-large);
     height: auto;
     /* padding: 0px 20px; */
     margin: auto;
 }
+
+.card-proj{
+    position: relative;
+    height: 250px;
+    border-radius: 10px;
+    border: 2px solid #aaa;
+    overflow: hidden;
+}
+.card-proj .image-cover{
+    height: 100%;
+    background-color: #000;
+}
+.image-cover img{
+    width: 100%;
+    height: 100%;
+
+}
+
+.card-proj .card-titlep{
+    width: 100%;
+    position:absolute;
+    bottom: 0px;
+    background-color: rgba(0, 0, 0, 0.527);
+}
+
+.card-proj .card-titlep h3{
+    font-family: 'Varela Round', sans-serif;
+    font-size: 15px;
+    padding: 5px 0;
+    color: #fff;
+    text-align: center;
+}
+.hover-effect .btn-card{
+    display: none;
+    padding: 10px 20px;
+    border-radius: 50vh;
+    background-color: rgba(3, 4, 83, 0.363);
+    border: 1px solid #000;
+    color: var(--color-1);
+    cursor: pointer;
+}
+
+.hover-effect{
+    position: absolute;
+    display: flex;
+    height: 100%;
+    width: 100%;
+    top: 0px;
+    background-color: rgba(0, 0, 0, 0);
+    justify-content: center;
+    align-items: center;
+    overflow: hidden;
+    transition: all 0.3s;
+
+}
+.card-proj:hover > .hover-effect{
+    display: flex;
+    background-color: rgba(0, 0, 0, 0.589);
+}
+.hover-effect:hover > .btn-card{
+    display: block;
+}
+
+
+/* box modal */
+.box-modal{
+    display: flex;
+    position: fixed;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0px;
+    background-color: rgba(0, 0, 0, 0.897);
+    z-index: 10;
+}
+.box-modal.hide{
+    display: none;
+}
+.box-modal-project{
+    position: relative;
+    width: 80%;
+    height: 80vh;
+    border-radius: 10px;
+    background-color: rgba(98, 98, 102, 0.87);
+    box-shadow: 0 0 10px #000;
+    animation-name: zoom;
+    animation-duration: 0.3s;
+    transition: cubic-bezier(0.075, 0.82, 0.165, 1);
+}
+@keyframes zoom{
+    from {transform:scale(0)}
+    to {transform:scale(1)}
+}
+.close-box{
+    position: absolute;
+    top: -30px;
+    right: -30px;
+    display: flex;
+    justify-content: right;
+    border-radius: 50vh;
+    background-color: #656868d2;
+
+}
+.close-box .bx{
+    color: #1d36e9;
+    font-size: 2rem;
+    cursor: pointer;
+}
+
+/* Slideshow container */
+.slideshow-container {
+    width: 100%;
+    height: 100%;
+    position: relative;
+    margin: auto;
+  }
+  
+  /* Hide the images by default */
+  .img-slide{
+    width: 100%;
+    height: 100%;
+    justify-content: center;
+    align-items: center;
+
+  }
+  .img-slide img{
+    border-radius: 10px;
+    width: 100%;
+    height: 100%;
+  }
+  .mySlides {
+    display: none;
+    height: 100%;
+  }
+  /* Next & previous buttons */
+  .prev, .next {
+    cursor: pointer;
+    position: absolute;
+    top: 50%;
+    width: auto;
+    margin-top: -22px;
+    padding: 16px;
+    color: white;
+    font-weight: bold;
+    font-size: 18px;
+    transition: 0.6s ease;
+    border-radius: 0 3px 3px 0;
+    user-select: none;
+    background-color: rgba(0, 0, 0, 0.288);
+  }
+  
+  /* Position the "next button" to the right */
+  .next {
+    right: 0;
+    border-radius: 3px 0 0 3px;
+  }
+  
+  /* On hover, add a black background color with a little bit see-through */
+  .prev:hover, .next:hover {
+    background-color: rgba(0,0,0,0.8);
+  }
+  
+  /* Caption text */
+  .text {
+    color: #f2f2f2;
+    font-size: 15px;
+    padding: 8px 12px;
+    position: absolute;
+    bottom: 8px;
+    width: 100%;
+    text-align: center;
+  }
+  
+  /* Number text (1/3 etc) */
+  .numbertext {
+    color: #f2f2f2;
+    font-size: 12px;
+    padding: 8px 12px;
+    position: absolute;
+    top: 0;
+  }
+  
+  /* The dots/bullets/indicators */
+  .dot {
+    position: absolute;
+    cursor: pointer;
+    bottom: 10px;
+    height: 15px;
+    width: 15px;
+    margin: 0 2px;
+    background-color: #bbb;
+    border-radius: 50%;
+    transition: background-color 0.6s ease;
+  }
+  
+  .active, .dot:hover {
+    /* background-color: #717171; */
+  }
+  
+  /* Fading animation */
+  .fade {
+    animation-name: fade;
+    animation-duration: 1.5s;
+  }
+  
+  @keyframes fade {
+    from {opacity: .4}
+    to {opacity: 1}
+  }
+
+/* ==================================== */
+
 
 #contact {
     background-color: rgb(15, 15, 51);
