--- a/css/style.css
+++ b/css/style.css
@@ -501,16 +501,27 @@ nav ul li a:hover {
     background-color: rgba(0, 0, 0, 0.03);
     border: solid 2px var(--color-card-border);
     overflow: hidden;
-    transition: border .5s;
     transition: all cubic-bezier(0.075, 0.82, 0.165, 1) 0.3s;
+}
+.card-services:hover{
+    position: relative;
+    transform: scale(1.2);
+    background-color: rgba(255,255,255,0.05);
+    border: 2px solid  rgba(255,255,255,0.05);
 }
 .card-services .card-cover{
     width: 100%;
     height: 200px;
+    overflow: hidden;
 }
 .card-cover img{
     width: 100%;
     height: 100%;
+    transition: cubic-bezier(0.075, 0.82, 0.165, 1) 0.3s;
+}
+.card-services img:hover{
+    position: relative;
+    transform: scale(1.2);
 }
 .card-title{
     width: 100%;
@@ -549,21 +560,27 @@ nav ul li a:hover {
 }
 
 #projects .projects {
-    display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(min(100%, 300px), 1fr));
-    grid-gap: 28px;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 40px;
     max-width: var(--breakpoint-extra-large);
+    justify-content: space-around;
     height: auto;
-    /* padding: 0px 20px; */
     margin: auto;
 }
 
 .card-proj{
     position: relative;
-    height: 250px;
+    width: 320px;
+    height: 200px;
     border-radius: 10px;
     border: 2px solid #aaa;
     overflow: hidden;
+}
+.card-proj:hover{
+    position: relative;
+    transform: scale(1.2);
+    border: 2px solid rgb(0, 195, 255);
 }
 .card-proj .image-cover{
     height: 100%;
@@ -706,7 +723,6 @@ nav ul li a:hover {
     font-size: 18px;
     transition: 0.6s ease;
     border-radius: 0 3px 3px 0;
-    user-select: none;
     background-color: rgba(0, 0, 0, 0.288);
   }
   
