--- a/css/style.css
+++ b/css/style.css
@@ -95,12 +95,13 @@ html {
     display: flex;
     height: 40px;
     width: calc(100% - 5px);
-    background-color: var(--color-nav-bg);
+    background-color: #00031edb;
     border: solid 2px var(--color-1);
     border-radius: 50vh;
     margin: 3px 5px;
     justify-content: center;
     box-shadow: 0 0 10px var(--color-1);
+    backdrop-filter: blur(5px);
     z-index: 5;
     transition: all ease-in 0.2s;
 }
@@ -479,12 +480,14 @@ nav ul li a:hover {
 }
 
 #services {
+    position: relative;
     height: auto;
     max-width: 100%;
     padding: 0px 20px;
     padding-bottom: 20px;
     background: var(--color-bg);
     transition: all ease-in 0.2s;
+    overflow: hidden;
 }
 
 #services .services {
@@ -501,7 +504,7 @@ nav ul li a:hover {
     width: 100%;
     border-radius: 12px;
     box-shadow: 0 0 10px var(--color-shadow);
-    background-color: rgba(0, 0, 0, 0.03);
+    background-color: var(--color-bg);
     border: solid 2px var(--color-card-border);
     overflow: hidden;
     transition: all cubic-bezier(0.075, 0.82, 0.165, 1) 0.3s;
@@ -540,27 +543,17 @@ nav ul li a:hover {
     text-align: center;
     padding: 12px 0;
 }
-.card-services .btn{
-    background-color: transparent;
-    margin: none;
-    color: var(--color-1);
-    text-decoration: none;
-    padding: 5px 10px;
-    transform: translate(10px, 10px);
-    border-radius: 50vh;
-    border: solid 2px var(--color-3);
-    transition: all 0.3s;
-}
-
 
 /* ======project===== */
 #projects {
+    position: relative;
     height: auto;
     background-color: var(--color-bg);
     padding: 0 20px;
     padding-bottom: 20px;
     justify-content: center;
     transition: all ease-in 0.2s;
+    overflow: hidden;
 }
 
 #projects .projects {
@@ -586,6 +579,7 @@ nav ul li a:hover {
     position: relative;
     transform: scale(1.2);
     border: 2px solid rgb(0, 195, 255);
+    box-shadow: 0 0 14px #00eeff;
 }
 .card-proj .image-cover{
     height: 100%;
@@ -612,6 +606,7 @@ nav ul li a:hover {
     text-align: center;
 }
 .hover-effect .btn-card{
+    position: relative;
     display: none;
     padding: 10px 20px;
     border-radius: 50vh;
@@ -619,7 +614,69 @@ nav ul li a:hover {
     border: 1px solid #000;
     color: var(--color-1);
     cursor: pointer;
+    overflow: hidden;
+
+    display: inline-block;
+    border: 1px solid #4f4f4f;
+    border-radius: 50vh;
+    transition: all 0.2s ease-in;
+    position: relative;
+    overflow: hidden;
+    z-index: 1;
+
 }
+
+
+.btn-card:before {
+    content: "";
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%) scaleY(1) scaleX(1.25);
+    top: 100%;
+    width: 140%;
+    height: 180%;
+    background-color: rgba(0, 0, 0, 0.05);
+    border-radius: 50%;
+    display: block;
+    transition: all 0.5s 0.1s cubic-bezier(0.55, 0, 0.1, 1);
+    z-index: -1;
+   }
+   
+   .btn-card:after {
+    content: "";
+    position: absolute;
+    left: 55%;
+    transform: translateX(-50%) scaleY(1) scaleX(1.45);
+    top: 180%;
+    width: 160%;
+    height: 190%;
+    background-color: #39bda7;
+    border-radius: 50%;
+    display: block;
+    transition: all 0.5s 0.1s cubic-bezier(0.55, 0, 0.1, 1);
+    z-index: -1;
+   }
+   
+   .btn-card:hover {
+    color: #ffffff;
+    border: 1px solid #39bda7;
+   }
+   
+   .btn-card:hover:before {
+    top: -35%;
+    background-color: #39bda7;
+    transform: translateX(-50%) scaleY(1.3) scaleX(0.8);
+   }
+   
+   .btn-card:hover:after {
+    top: -45%;
+    background-color: #39bda7;
+    transform: translateX(-50%) scaleY(1.3) scaleX(0.8);
+   }
+
+
+
+
 
 .hover-effect{
     position: absolute;
@@ -863,4 +920,125 @@ footer h3 {
 
 footer span {
     color: var(--color-5);
+}
+
+
+/* From uiverse.io by @mrhyddenn */
+/* .card-services .btn{
+    color: var(--color-1);
+    text-decoration: none;
+    padding: 5px 10px;
+    transform: translate(10px, 10px);
+    border-radius: 50vh;
+    transition: all 0.3s;
+} */
+.btn {
+    font-family: 'Varela Round', Courier, monospace;
+    position: relative;
+    padding: 8px 15px;
+    border-radius: 50vh;
+    text-decoration: none;
+    border: 2px solid rgb(61, 106, 255);
+    font-size: 14px;
+    font-weight: 600;
+    letter-spacing: 2px;
+    background: transparent;
+    color: #fff;
+    overflow: hidden;
+    box-shadow: 0 0 0 0 transparent;
+    -webkit-transition: all 0.2s ease-in;
+    -moz-transition: all 0.2s ease-in;
+    transition: all 0.2s ease-in;
+  }
+  
+  .btn:hover {
+    background: rgb(61, 106, 255);
+    box-shadow: 0 0 10px 2px rgba(0, 142, 236, 0.815);
+    border: 2px solid rgb(183, 200, 255);
+    -webkit-transition: all 0.2s ease-out;
+    -moz-transition: all 0.2s ease-out;
+    transition: all 0.2s ease-out;
+  }
+  
+  .btn:hover::before {
+    -webkit-animation: sh02 0.3s 0s linear;
+    -moz-animation: sh02 0.3s 0s linear;
+    animation: sh02 0.2s 0s linear;
+  }
+  
+  .btn::before {
+    content: '';
+    display: block;
+    width: 0px;
+    height: 86%;
+    position: absolute;
+    top: 7%;
+    left: 0%;
+    opacity: 0;
+    background: #fff;
+    box-shadow: 0 0 30px 30px #fff;
+    -webkit-transform: skewX(-20deg);
+    -moz-transform: skewX(-20deg);
+    -ms-transform: skewX(-20deg);
+    -o-transform: skewX(-20deg);
+    transform: skewX(-20deg);
+  }
+  
+  @keyframes sh02 {
+    from {
+      opacity: 0;
+      left: 0%;
+    }
+  
+    50% {
+      opacity: 1;
+    }
+  
+    to {
+      opacity: 0;
+      left: 100%;
+    }
+  }
+
+
+
+  .card-services:hover {
+    background-position: right center;
+    border: 2px solid #00eeff;
+    background-size: 200% auto;
+    background-color: #292950;
+    -webkit-animation: pulse 2s;
+    animation: pulse512 1s;
+    /* box-shadow: 0 0 20px #05baff88; */
+   }
+   
+   @keyframes pulse512 {
+    0% {
+     box-shadow: 0 0 0 0 #05baff88;
+    }
+   
+    70% {
+     box-shadow: 0 0 0 15px rgba(0, 0, 0, 0);
+    }
+   
+    100% {
+     box-shadow: 0 0 0 0 rgba(0, 0, 0, 0);
+    }
+   }
+
+.span1{
+    position: absolute;
+    width: 900px;
+    height: 900px;
+    top: -400px;
+    left: -400px;
+    background: radial-gradient(circle, rgba(255, 0, 212, 0.144) 0%, rgba(0, 213, 255, 0) 70%);
+}
+.span2{
+    position: absolute;
+    width: 900px;
+    height: 900px;
+    bottom: -400px;
+    right: -400px;
+    background: radial-gradient(circle, rgba(0, 247, 255, 0.185) 0%, rgba(0, 213, 255, 0) 70%);
 }
