--- a/portfolio/assets/css/style.css
+++ b/portfolio/assets/css/style.css
@@ -9,19 +9,16 @@
 box-shadow: inset 0 0 5px rgb(70, 55, 207); 
 border-radius: 10px;
 }
-::-webkit-scrollbar-thumb {
-background: #2eafec;
-border: solid 1px rgb(0, 0, 0);
-border-radius: 10px;
-}
+::-webkit-scrollbar-thumb {background: #2eafec;border: solid 1px rgb(0, 0, 0);border-radius: 10px;}
 ::-webkit-scrollbar-thumb:hover {
 background: #ff00bf; 
 
 }
 /* =====variables==== */
 :root{
-    --color-bg: linear-gradient(0deg, rgba(14,40,73,1) 0%, rgba(4,11,20,1) 100%);;
-    --color-bdr-nav: #ff00a5;
+    --color-bg:
+    linear-gradient(0deg, rgba(14,40,73,1) 0%, rgba(4,11,20,1) 100%);
+    --color-bdr-nav: #004eff;
     --color-primary: #00ffff;
     --color-secondary: #000000;
     --color-btn: #000000;
@@ -97,7 +94,7 @@ h6 {
     position: fixed;
     transition: all ease-in-out 0.5s;
     /* border-radius: 5px; */
-    border: 2px solid var(--color-bdr-nav);
+    /* border-right: 2px solid var(--color-bdr-nav); */
     top: 0;
     left: 0;
     bottom: 0;
@@ -106,6 +103,7 @@ h6 {
     transition: all 0.5s;
     padding: 0 15px;
     background: var(--color-bg);
+    box-shadow: 0 0 20px 2px #000;
     overflow-y: auto;
 }
 
@@ -120,7 +118,7 @@ h6 {
     margin: 15px auto;
     display: block;
     width: 120px;
-    border: 8px solid var(--color-primary);
+    border: 3px solid var(--color-primary);
 }
 
 #header .profile h1 {
@@ -153,13 +151,14 @@ h6 {
     text-align: center;
     width: 36px;
     height: 36px;
-    transition: 0.3s;
+    transition: ease-in 0.1s;
 }
 
 #header .profile .social-links a:hover {
-    background: var(--color-bdr-nav);
-    color: #09ff09;
-    border: 2px solid #09ff00;
+    /* background: var(--color-bdr-nav); */
+    /* color: #09ff09; */
+    /* border: 0px solid #09ff00; */
+    box-shadow: 0 0 15px 2px #b900ff;
     text-decoration: none;
 }
 
@@ -209,22 +208,23 @@ h6 {
     font-size: 15px;
     font-weight: bold;
     border: 2px solid transparent;
+    transition: all ease-in 0.3s;
 }
 
 .nav-menu a i {
     font-size: 24px;
     padding-right: 8px;
-    color: #0033ff;
+    color: #ef00ff;
 }
 
 .nav-menu a:hover,
 .nav-menu .active>a,
 .nav-menu li:hover>a {
     text-decoration: none;
-    color: #09ff00;
+    color: #6eff00;
     border-radius: 50vh;
-    border: 2px solid #09ff00
-
+    border: 2px solid #6eff00;
+    box-shadow: 0 0 10px #6aff00;
 }
 
 .nav-menu a:hover i,
@@ -293,7 +293,7 @@ h6 {
 #portada .portada-container {
     background: #040b14a2;
     padding: 20px 20px;
-    border-radius: 30vh;
+    border-radius: 20px;
     position: relative;
     z-index: 2;
     min-width: 300px;
@@ -390,7 +390,7 @@ section {
 .about .content h3 {
     font-weight: 700;
     font-size: 26px;
-    color: #173b6c;
+    color: #71adff;
 }
 
 .about .content ul {
@@ -559,7 +559,7 @@ section {
     text-align: center;
     background: rgb(120 26 255);
     background: linear-gradient(90deg, rgba(179,0,255,1) 0%, rgba(100,0,207,1) 100%);
-    border-radius: 50px;
+    border-radius: 50vh;
     padding: 2px 15px;
 }
 
