--- a/css/style.css
+++ b/css/style.css
@@ -511,7 +511,7 @@ nav ul li a:hover {
 }
 .card-services:hover{
     position: relative;
-    transform: scale(1.2);
+    transform: scale(1.02);
     background-color: rgba(255,255,255,0.05);
     border: 2px solid  rgba(255,255,255,0.05);
 }
@@ -577,7 +577,7 @@ nav ul li a:hover {
 }
 .card-proj:hover{
     position: relative;
-    transform: scale(1.2);
+    transform: scale(1.02);
     border: 2px solid rgb(0, 195, 255);
     box-shadow: 0 0 14px #00eeff;
 }
@@ -1033,7 +1033,21 @@ footer span {
     top: -400px;
     left: -400px;
     background: radial-gradient(circle, rgba(255, 0, 212, 0.144) 0%, rgba(0, 213, 255, 0) 70%);
+    /* -webkit-animation: 5s ease infinite animspan1; */
+    /* -moz-animation: 5s ease infinite animspan1; */
+    animation: linear animspan1;
+    animation-iteration-count: infinite;
+    animation-duration: 2s;
 }
+@keyframes animspan1 {
+    from {
+        background: radial-gradient(circle, rgba(255, 0, 212, 0.144) 0%, rgba(0, 213, 255, 0) 70%);
+    }
+    to {
+        background: radial-gradient(circle,rgba(0, 4, 255, 0.144) 0%, rgba(0, 213, 255, 0) 70%);
+    }
+}
+
 .span2{
     position: absolute;
     width: 900px;
