--- a/portfolio/assets/css/style.css
+++ b/portfolio/assets/css/style.css
@@ -559,7 +559,7 @@ section {
     text-align: center;
     background: rgb(120 26 255);
     background: linear-gradient(90deg, rgba(179,0,255,1) 0%, rgba(100,0,207,1) 100%);
-    border-radius: 50vh;
+    border-radius: 20px;
     padding: 2px 15px;
 }
 
@@ -805,7 +805,7 @@ display: flex;
 }
 .contact .php-email-form {
     width: 100%;
-    padding: 30px;
+    padding: 10px;
     background: linear-gradient(45deg, rgba(0,255,145,.8) 0%, rgba(0,146,255,.8) 54%, rgba(253,48,255,.8) 100%);
     border: 2px solid var(--color-primary);
     border-radius: 20px;
