--- a/css/style.css
+++ b/css/style.css
@@ -586,9 +586,10 @@ nav ul li a:hover {
 .card-proj .image-cover{
     height: 100%;
     background-color: #000;
+    text-align: center;
 }
 .image-cover img{
-    width: 100%;
+    /* width: 100%; */
     height: 100%;
 
 }
@@ -720,8 +721,8 @@ nav ul li a:hover {
 }
 .box-modal-project{
     position: relative;
-    width: 80%;
-    height: 80vh;
+    /* width: auto; */
+    height: 80%;
     border-radius: 10px;
     background-color: rgba(98, 98, 102, 0.87);
     box-shadow: 0 0 10px #000;
