--- a/css/style.css
+++ b/css/style.css
@@ -96,7 +96,7 @@ html {
     height: 40px;
     width: calc(100% - 5px);
     background-color: #00031edb;
-    border: solid 2px var(--color-1);
+    /* border: solid 2px var(--color-1); */
     border-radius: 50vh;
     margin: 3px 5px;
     justify-content: center;
@@ -568,46 +568,43 @@ nav ul li a:hover {
 }
 
 .card-proj{
-    position: relative;
     width: 320px;
-    height: 200px;
+    height: 230px;
     border-radius: 10px;
-    border: 2px solid #aaa;
-    overflow: hidden;
     transition: all ease-in 0.2s;
     z-index: 10;
 }
 .card-proj:hover{
-    position: relative;
-    transform: scale(1.02);
-    border: 2px solid rgb(0, 195, 255);
-    box-shadow: 0 0 14px #00eeff;
+    box-shadow: 0 0 14px #00eeff9d;
 }
 .card-proj .image-cover{
-    height: 100%;
+    height: 200px;
     background-color: #000;
+    border-radius: 10px;
+    overflow: hidden;
     text-align: center;
 }
 .image-cover img{
-    /* width: 100%; */
-    height: 100%;
+    width: 100%;
+    height: 200px;
 
 }
 
 .card-proj .card-titlep{
     width: 100%;
-    position:absolute;
+    position: absolute;
     bottom: 0px;
-    background-color: rgba(0, 0, 0, 0.527);
 }
 
 .card-proj .card-titlep h3{
-    font-family: 'Varela Round', sans-serif;
+    font-family: 'Sourse Sans Pro', sans-serif;
     font-size: 15px;
     padding: 5px 0;
     color: #fff;
     text-align: center;
 }
+
+
 .hover-effect .btn-card{
     position: relative;
     display: none;
@@ -618,7 +615,6 @@ nav ul li a:hover {
     color: var(--color-1);
     cursor: pointer;
     overflow: hidden;
-
     display: inline-block;
     border: 1px solid #4f4f4f;
     border-radius: 50vh;
@@ -687,20 +683,19 @@ nav ul li a:hover {
     height: 100%;
     width: 100%;
     top: 0px;
-    background-color: rgba(0, 0, 0, 0);
+    /* background-color: rgba(0, 0, 0, 0); */
     justify-content: center;
     align-items: center;
     overflow: hidden;
     transition: all 0.3s;
-
 }
-.card-proj:hover > .hover-effect{
+/* .card-proj:hover > .hover-effect{
     display: flex;
-    background-color: rgba(0, 0, 0, 0.589);
-}
-.hover-effect:hover > .btn-card{
+    background-color: rgba(0, 0, 0, 0.507);
+} */
+/* .hover-effect:hover > .btn-card{
     display: block;
-}
+} */
 
 
 /* box modal */
